# LLM-PhishingDetection-Autoencoder

./: README.md  pyproject.toml
data/: prediction_history.csv
data/processed_data/: processed_sms_data.csv
models/: autoencoder_model.pth
notebooks/: demoSMSPhising.ipynb
src/: main.py
src/features/: data_loader.py  data_processor.py  embedding_processor.py
src/model/: autoencoder_model.py  autoencoder_trainer.py  phishing_predictor.py
src/utils/: decorator_loggins.py  gradio_interface.py
